<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.tesi.twitter4j.MainActivity">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="#fff"
            android:text="@string/btn_login"
            android:textColor="#0080B4" />

        <ImageView
            android:id="@+id/diies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/prestext"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="25dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/content"
            android:cropToPadding="false"
            android:src="@drawable/diieslogo" />

        <TextView
            android:id="@+id/prestext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_login"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="84dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/login_instructions"
            android:textColor="#fff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/share_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffff"
            android:layout_margin="2dp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/content2"
            android:scaleType="centerCrop"
            android:src="@drawable/lakesideview"
            android:layout_below="@+id/user_name"
            android:layout_margin="2dp"/>

        <EditText
            android:id="@+id/share_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:hint="@string/share_instructions"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/imageView"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/btn_share"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="@string/btn_share"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/share_text"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/btn_getFriendList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="@string/getFriendList"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/btn_share"
            android:layout_margin="2dp"
            />

        <Button
            android:id="@+id/btn_getFollowersList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="@string/getFollowersList"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/btn_getFriendList"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="@string/logout"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/response_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/myfrineds"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/myfollowers"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="25sp" />

        <RelativeLayout
            android:id="@+id/backToLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <Button
                android:id="@+id/backTo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#ffff"
                android:text="@string/back"
                android:textColor="@color/colorPrimaryDark" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
